deployments/kubesphere-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubesphere-dev
  labels:
    app: kubesphere
    istio-injection: enabled
